--- a/Rulebook.tex
+++ b/Rulebook.tex
@@ -193,12 +193,13 @@ The rules and regulations of the sDSPL are highly based on the World Robot Summi
 The TC finally decided to use the OSS HSR simulator. You can find a Docker image of the simulator here:
 
 \vspace{5mm}
-{\small\url{https://github.com/hsr-project/tmc_wrs_docker}}
+{\small\url{https://github.com/hsr-project/hsrb_robocup_dspl_docker}}
+{\small\url{https://github.com/devrt/robocup2021-opl}}
 
 \vspace{5mm}
 This link\footnotemark explains how to use it in the simulation league.
 
-\footnotetext[2]{{\small\url{https://dev.to/yosuke/robocup-simulation-league-is-accepting-your-challenge-for-free-1g66}}}
+\footnotetext[2]{{\small\url{http://humansupportrobot.org/}}}
 
 \vspace{5mm}
 \textbf{Tests}
