--- a/Rulebook.tex
+++ b/Rulebook.tex
@@ -193,14 +193,12 @@ The rules and regulations of the sDSPL are highly based on the World Robot Summi
 The TC finally decided to use the OSS HSR simulator. You can find a Docker image of the simulator here:
 
 \vspace{5mm}
-{\small\url{https://github.com/hsr-project/hsrb_robocup_dspl_docker}}
-
-{\small\url{https://github.com/devrt/robocup2021-opl}}
+{\small\url{https://github.com/hsr-project/tmc_wrs_docker}}
 
 \vspace{5mm}
 This link\footnotemark explains how to use it in the simulation league.
 
-\footnotetext[2]{{\small\url{http://humansupportrobot.org/}}}
+\footnotetext[2]{{\small\url{https://dev.to/yosuke/robocup-simulation-league-is-accepting-your-challenge-for-free-1g66}}}
 
 \vspace{5mm}
 \textbf{Tests}
@@ -319,7 +317,7 @@ Object's specifications and their corresponding 3D models can be found in http:/
 
 \begin{figure}[!h]%[!htbp]
 	\centering
-	\begin{subfigure}{.365\textwidth}
+	\begin{subfigure}{.39\textwidth}
   		\centering
 	    \includegraphics[width=1\textwidth]{{images/drawer.jpg}}
 	    \caption{}
