--- a/Rulebook.tex
+++ b/Rulebook.tex
@@ -329,7 +329,7 @@ Object's specifications and their corresponding 3D models can be found in http:/
   		\caption{}
   		\label{fig:handles}
 	\end{subfigure}
-	\caption{a) Stairs-like drawer. The drawer will be as it is (left drawer) or it might have a handle and/or be opened under team request (middle drawers); when opening a drawer, it should not be unmounted from the shelf. b) Several views of the easy-to-manipulate handles (\url{https://www.amazon.com/Suction-BYBYCD-Handles-Bathroom-Adsorbent/dp/B07GYKJCTR}).}%; as a reference, the circular base has a diameter of 6cm and a height of 2cm while the handle part has a long side of 6cm, short side of 3.5cm and a height of 3cm.}
+	\caption{a) Stairs-like drawer. The drawer will be as it is (left drawer); when opening a drawer, it should not be unmounted from the shelf (middle drawers). b) Several views of the easy-to-manipulate handles (\url{https://www.amazon.com/Suction-BYBYCD-Handles-Bathroom-Adsorbent/dp/B07GYKJCTR}).}%; as a reference, the circular base has a diameter of 6cm and a height of 2cm while the handle part has a long side of 6cm, short side of 3.5cm and a height of 3cm.}
 	\label{fig:fulldrawer}
 	%\end{center}
 \end{figure}
